@@ -9,8 +9,15 @@ dependencies {
     implementation project(':jhotdraw-gui')
     implementation project(':jhotdraw-utils')
     implementation project(':jhotdraw-xml')
+    implementation "org.aspectj:aspectjweaver:1.9.20"
+    implementation "dk.sdu.mmmi.featuretracer:featuretracer:1.0"
 }
 
-application {
-    mainClass = 'org.jhotdraw.samples.mini.EditorSample'
-}
+//application {
+//    mainClass = 'org.jhotdraw.samples.mini.EditorSample'
+//    project.configurations.implementation.setCanBeResolved(true)
+//    applicationDefaultJvmArgs = [
+//            "-javaagent:${project.configurations.implementation.find { it.name.startsWith("aspectjweaver") }}",
+//            '--add-opens=java.base/java.lang=ALL-UNNAMED'
+//    ]
+//}
